--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pplug-cputemp (0.13) bookworm; urgency=medium
+
+  * First hybrid package version
+
+ -- Simon Long <simon@raspberrypi.com>  Thu, 16 Jan 2025 14:43:56 +0000
+
 lxplug-cputemp (0.12) bullseye; urgency=medium
 
   * Indicate different throttle state
